# KTX-Utility

./: .clang-format  CMakeLists.txt
Include/: GL_Format.hpp  KtxUtility.hpp
Source/: KtxUtility.cpp
Test/: test.cpp
